# StreamDeck-AudioMute

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Sources/: CMakeLists.txt  DefaultAudioDevices.cpp  MuteAction.cpp  ToggleMuteAction.cpp  UnmuteAction.cpp  version.rc.in
sdPlugin/: manifest.in.json
sdPlugin/propertyinspector/: index.html
